examples/test/testpolicy5789.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5789
  namespace: namespace307
spec:
  podSelector:
    matchLabels:
      key2: value4
      key0: value17
      key11: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value35
          key32: value20
          key41: value43
      podSelector:
        matchLabels:
          key41: value7
          key29: value30
          key33: value49
